// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/pip_setup/index extractPackageFile() catches error 1`] = `
Array [
  "python --version",
  "python3 --version",
  "python3.8 --version",
  "python \\"/root/project/lib/manager/pip_setup/extract.py\\" \\"/tmp/folders/foobar.py\\"",
]
`;

exports[`lib/manager/pip_setup/index extractPackageFile() catches error 2`] = `
Array [
  Object {
    "encoding": "utf-8",
  },
  Object {
    "encoding": "utf-8",
  },
  Object {
    "encoding": "utf-8",
  },
  Object {
    "cwd": "/tmp/github/some/repo",
    "encoding": "utf-8",
    "timeout": 5000,
  },
]
`;

exports[`lib/manager/pip_setup/index extractPackageFile() returns found deps (docker) 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": ">=3.1.13.0,<5.0",
      "datasource": "pypi",
      "depName": "celery",
      "managerData": Object {
        "lineNumber": 36,
      },
    },
    Object {
      "currentValue": ">=1.7",
      "datasource": "pypi",
      "depName": "logging_tree",
      "managerData": Object {
        "lineNumber": 39,
      },
    },
    Object {
      "currentValue": ">=2.2",
      "datasource": "pypi",
      "depName": "pygments",
      "managerData": Object {
        "lineNumber": 40,
      },
    },
    Object {
      "currentValue": ">=5.0",
      "datasource": "pypi",
      "depName": "psutil",
      "managerData": Object {
        "lineNumber": 41,
      },
    },
    Object {
      "currentValue": ">=3.0",
      "datasource": "pypi",
      "depName": "objgraph",
      "managerData": Object {
        "lineNumber": 42,
      },
    },
    Object {
      "currentValue": ">=1.11.23,<2.0",
      "datasource": "pypi",
      "depName": "django",
      "managerData": Object {
        "lineNumber": 45,
      },
    },
    Object {
      "currentValue": ">=0.11,<2.0",
      "datasource": "pypi",
      "depName": "flask",
      "managerData": Object {
        "lineNumber": 48,
      },
    },
    Object {
      "currentValue": ">=1.4,<2.0",
      "datasource": "pypi",
      "depName": "blinker",
      "managerData": Object {
        "lineNumber": 49,
      },
    },
    Object {
      "currentValue": ">=19.7.0,<20.0",
      "datasource": "pypi",
      "depName": "gunicorn",
      "managerData": Object {
        "lineNumber": 61,
      },
    },
    Object {
      "currentValue": ">=3.2.1,<4.0",
      "datasource": "pypi",
      "depName": "statsd",
      "managerData": Object {
        "lineNumber": 62,
      },
    },
    Object {
      "currentValue": ">=0.15.3,<0.16",
      "datasource": "pypi",
      "depName": "Werkzeug",
      "managerData": Object {
        "lineNumber": 62,
      },
    },
    Object {
      "currentValue": ">=2.10.0,<3.0",
      "datasource": "pypi",
      "depName": "requests",
      "managerData": Object {
        "lineNumber": 63,
      },
      "skipReason": "ignored",
    },
    Object {
      "currentValue": ">=5.27.1,<7.0",
      "datasource": "pypi",
      "depName": "raven",
      "managerData": Object {
        "lineNumber": 64,
      },
    },
    Object {
      "currentValue": ">=0.15.2,<0.17",
      "datasource": "pypi",
      "depName": "future",
      "managerData": Object {
        "lineNumber": 65,
      },
    },
    Object {
      "currentValue": ">=1.0.16,<2.0",
      "datasource": "pypi",
      "depName": "ipaddress",
      "managerData": Object {
        "lineNumber": 66,
      },
    },
  ],
}
`;

exports[`lib/manager/pip_setup/index extractPackageFile() returns found deps (docker) 2`] = `
Array [
  "docker pull renovate/pip",
  "docker run -i --rm -v /tmp/github/some/repo:/tmp/github/some/repo -v /root/project/lib/manager/pip_setup:/root/project/lib/manager/pip_setup -w /tmp/github/some/repo renovate/pip python \\"/root/project/lib/manager/pip_setup/extract.py\\" \\"test/manager/pip_setup/_fixtures/setup.py\\"",
]
`;

exports[`lib/manager/pip_setup/index extractPackageFile() returns found deps (docker) 3`] = `
Array [
  Object {
    "encoding": "utf-8",
  },
  Object {
    "cwd": "/tmp/github/some/repo",
    "encoding": "utf-8",
    "timeout": 5000,
  },
]
`;

exports[`lib/manager/pip_setup/index extractPackageFile() returns found deps 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": ">=3.1.13.0,<5.0",
      "datasource": "pypi",
      "depName": "celery",
      "managerData": Object {
        "lineNumber": 36,
      },
    },
    Object {
      "currentValue": ">=1.7",
      "datasource": "pypi",
      "depName": "logging_tree",
      "managerData": Object {
        "lineNumber": 39,
      },
    },
    Object {
      "currentValue": ">=2.2",
      "datasource": "pypi",
      "depName": "pygments",
      "managerData": Object {
        "lineNumber": 40,
      },
    },
    Object {
      "currentValue": ">=5.0",
      "datasource": "pypi",
      "depName": "psutil",
      "managerData": Object {
        "lineNumber": 41,
      },
    },
    Object {
      "currentValue": ">=3.0",
      "datasource": "pypi",
      "depName": "objgraph",
      "managerData": Object {
        "lineNumber": 42,
      },
    },
    Object {
      "currentValue": ">=1.11.23,<2.0",
      "datasource": "pypi",
      "depName": "django",
      "managerData": Object {
        "lineNumber": 45,
      },
    },
    Object {
      "currentValue": ">=0.11,<2.0",
      "datasource": "pypi",
      "depName": "flask",
      "managerData": Object {
        "lineNumber": 48,
      },
    },
    Object {
      "currentValue": ">=1.4,<2.0",
      "datasource": "pypi",
      "depName": "blinker",
      "managerData": Object {
        "lineNumber": 49,
      },
    },
    Object {
      "currentValue": ">=19.7.0,<20.0",
      "datasource": "pypi",
      "depName": "gunicorn",
      "managerData": Object {
        "lineNumber": 61,
      },
    },
    Object {
      "currentValue": ">=3.2.1,<4.0",
      "datasource": "pypi",
      "depName": "statsd",
      "managerData": Object {
        "lineNumber": 62,
      },
    },
    Object {
      "currentValue": ">=0.15.3,<0.16",
      "datasource": "pypi",
      "depName": "Werkzeug",
      "managerData": Object {
        "lineNumber": 62,
      },
    },
    Object {
      "currentValue": ">=2.10.0,<3.0",
      "datasource": "pypi",
      "depName": "requests",
      "managerData": Object {
        "lineNumber": 63,
      },
      "skipReason": "ignored",
    },
    Object {
      "currentValue": ">=5.27.1,<7.0",
      "datasource": "pypi",
      "depName": "raven",
      "managerData": Object {
        "lineNumber": 64,
      },
    },
    Object {
      "currentValue": ">=0.15.2,<0.17",
      "datasource": "pypi",
      "depName": "future",
      "managerData": Object {
        "lineNumber": 65,
      },
    },
    Object {
      "currentValue": ">=1.0.16,<2.0",
      "datasource": "pypi",
      "depName": "ipaddress",
      "managerData": Object {
        "lineNumber": 66,
      },
    },
  ],
}
`;

exports[`lib/manager/pip_setup/index extractPackageFile() returns found deps 2`] = `
Array [
  "python3 \\"/root/project/lib/manager/pip_setup/extract.py\\" \\"test/manager/pip_setup/_fixtures/setup.py\\"",
]
`;

exports[`lib/manager/pip_setup/index extractPackageFile() returns found deps 3`] = `
Array [
  Object {
    "cwd": "/tmp/github/some/repo",
    "encoding": "utf-8",
    "timeout": 5000,
  },
]
`;

exports[`lib/manager/pip_setup/index extractPackageFile() should return null for invalid file 1`] = `
Array [
  "python3 \\"/root/project/lib/manager/pip_setup/extract.py\\" \\"/tmp/folders/foobar.py\\"",
]
`;

exports[`lib/manager/pip_setup/index extractPackageFile() should return null for invalid file 2`] = `
Array [
  Object {
    "cwd": "/tmp/github/some/repo",
    "encoding": "utf-8",
    "timeout": 5000,
  },
]
`;
